# Automated-Discord-Custom-Status

./: Cargo.toml  README.md
config/: config.ini
src/: client.rs  get_apps.rs  main.rs  parser.rs
