[package]
name = "discord_custom_status"
version = "0.1.0"
authors = ["Justinas Staskevicius <staskevicius14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.4.1"
reqwest = { version = "0.10.9", features = ["blocking", "json"] }
serde = "1.0.117"
serde_json = "1.0.59"
winapi = { version = "0.3.9", features = ["winuser"] }